In LatexEntry::updateEntry path to esp file is constructed invalid. This commit fix it. During debuging, it was found, that EpsRenderer don't check, that input is valid, at all. So, the commit also add checking, that input file is valid eps file, and warning message printing, if it is not true.

BUG: 330834
FIXED-IN: 18.04.2
Differential Revision: https://phabricator.kde.org/D13234